@@ -1,4 +1,10 @@
 
+next
+----
+- added sounds:
+	- toy_squeak
+
+
 v1.11
 -----
 - added setting to enable/disable built-in sound groups
